2009-01-14  Jakub Jelinek  <jakub@redhat.com>

	* Makefile.am (ehopt.o): Add struc-symbol.h.
	* Makefile.in: Regenerated.
	* ehopt.c: Include struc-symbol.h.
	(check_eh_frame): For very small O_constant DW_CFA_advance_loc4
	create correct DW_CFA_advance_loc.  Handle O_subtract only
	for code alignment factor 1, otherwise handle O_divide or
	O_right_shift of O_subtract and O_constant.
	(eh_frame_estimate_size_before_relax): Always divide by ca.
	(eh_frame_convert_frag): Likewise.

2009-01-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* dw2gencfi.c (output_cfi_insn): Scale DW_CFA_advance_loc1,
	DW_CFA_advance_loc2 and DW_CFA_advance_loc4 outputs.

2009-01-08  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (NO_ISA_COP): New macro.
	(COP_INSN): New macro.
	(is_opcode_valid): Use them.
	(macro) <ld_st>: Use them.  Don't accept coprocessor load store
	insns based on the ISA if CPU is NO_ISA_COP.
	<copz>: Likewise for coprocessor operations.

2008-10-09  Eric Botcazou  <ebotcazou@adacore.com>

	* dw2gencfi.c (cfi_finish): Deal with md_fix_up_eh_frame.
	* config/tc-i386.h (md_fix_up_eh_frame): Define on Solaris.
	(i386_solaris_fix_up_eh_frame): Declare.
	* config/tc-i386.c (i386_solaris_fix_up_eh_frame): New function.

2008-09-29  Nick Clifton  <nickc@redhat.com>

	PR 6878
	* app.c (do_scrub_chars): Only issue warnings about tick
	characters detected in symbol strings if hex ticks are supported.

2008-09-29  Nick Clifton  <nickc@redhat.com>

	* dw2gencfi.c (output_cfi_insn): Fix typo in invocation of
	tc_cfi_emit_pcrel_expr macro.

2008-09-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention .cfi_val_encoded_addr.

2008-09-26  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.am (TARG_ENV_HFILES): Add config/te-solaris.h.
	* Makefile.in (TARG_ENV_HFILES): Likewise.
	* configure.tgt (Solaris targets): Set em=solaris.
	* config/te-solaris.h: New file.

2008-09-25  Richard Henderson  <rth@redhat.com>
