@@ -28,4 +28,27 @@ Disassembly of section \.text:
   48:	7e 08 3a ac 	dstt    r8,r7,0
   4c:	7c 65 32 ec 	dstst   r5,r6,3
   50:	7e 44 2a ec 	dststt  r4,r5,2
-
+  54:	00 00 02 00 	attn
+  58:	7c 6f f1 20 	mtcr    r3
+  5c:	7c 6f f1 20 	mtcr    r3
+  60:	7c 68 11 20 	mtcrf   129,r3
+  64:	7c 70 11 20 	mtocrf  1,r3
+  68:	7c 70 21 20 	mtocrf  2,r3
+  6c:	7c 70 41 20 	mtocrf  4,r3
+  70:	7c 70 81 20 	mtocrf  8,r3
+  74:	7c 71 01 20 	mtocrf  16,r3
+  78:	7c 72 01 20 	mtocrf  32,r3
+  7c:	7c 74 01 20 	mtocrf  64,r3
+  80:	7c 78 01 20 	mtocrf  128,r3
+  84:	7c 60 00 26 	mfcr    r3
+  88:	7c 70 10 26 	mfocrf  r3,1
+  8c:	7c 70 20 26 	mfocrf  r3,2
+  90:	7c 70 40 26 	mfocrf  r3,4
+  94:	7c 70 80 26 	mfocrf  r3,8
+  98:	7c 71 00 26 	mfocrf  r3,16
+  9c:	7c 72 00 26 	mfocrf  r3,32
+  a0:	7c 74 00 26 	mfocrf  r3,64
+  a4:	7c 78 00 26 	mfocrf  r3,128
+  a8:	7c 01 17 ec 	dcbz    r1,r2
+  ac:	7c 23 27 ec 	dcbzl   r3,r4
+  b0:	7c 05 37 ec 	dcbz    r5,r6
